# DiscordAnnouncer

./: .env.example  .gitignore  AGENT.md  README.md  launch-linux.sh  launch-windows.ps1  pyproject.toml
src/: main.py
src/notifier/: __init__.py  attachments.py  cli.py  core.py  env.py  gui_tk.py  templates.py
templates/: live_announcement.json.j2  metadata.json  schedule_card.json.j2
tests/: test_attachments.py  test_cli.py  test_core.py  test_env.py  test_templates.py
